# piecework-tools

./: .gitignore  Dockerfile  Procfile  fly.toml  m.py  manage.py  md.py  old.txt  pyproject.toml  railway.json  requirements.txt
finances/: admin.py  models.py  urls.py  views.py
finances/migrations/: 0001_initial.py  0002_vendor.py  0003_recurringexpense.py  0004_recurringexpense_amount.py  0005_rename_amount_recurringexpense_aproximate_amount_and_more.py  0006_alter_item_name.py
piecework/: admin.py  apps.py  db.py  domain.py  forms.py  models.py  urls.py  views.py
piecework/migrations/: 0001_initial.py  0002_sprinttime.py  0003_sprintmethod_sprinttime_method.py  0004_unitarea.py  0005_action_description_sprintmethod_description.py  0006_actiontime_unit.py  0007_alter_actiontime_unit.py  0008_unit.py  0009_alter_actiontime_unit.py  0010_unit_is_finished_alter_action_name_alter_unit_number.py  0011_unit_bulkheads_count_unit_windows_count_and_more.py  0012_unit_total_sheets.py  0013_sprinttime_area.py  0014_alter_sprinttime_method.py  0015_alter_actiontime_action_alter_actiontime_unit.py  0016_actiontime_is_boarding.py  0017_remove_unit_total_sheets.py  0018_unitsheetcount.py  0019_sheettype.py  0020_alter_unitsheetcount_type.py  0021_alter_unitsheetcount_length.py  0025_test_child.py  (+30 more)
piecework_tools/: asgi.py  domain.py  settings.py  urls.py  wsgi.py
tasks/: admin.py  forms.py  models.py  urls.py  views.py
time_tracker/: admin.py  contexts.py  db.py  domain.py  forms.py  models.py  tests.py  urls.py  views.py
tomo/: asgi.py  settings.py  urls.py  wsgi.py
(+68 files in other folders)
