[project]
name = "piecework-tools-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-livereload-server",
    "python-decouple",
    "django-extensions",
    "django-debug-toolbar",
    "django-ninja",
    "django-cors-headers",
    "django-tables2",
    "django-crispy-forms",
    "crispy-bootstrap5",
    "django-pandas",
    "django-pivot",
    "whitenoise",
    "gevent",
    "django",
    "psycopg2",
    "gunicorn",
]

[dependency-groups]
dev = ["djlint>=1.36.4", "ipython==8.32.0"]
